# ICT2202

./: .gitignore  .gitmodules  README.md
ConsoleApplication1/: ConsoleApplication1.sln
ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  header.h  keyboard.h  keyboard_hook.cpp  main.cpp  stats.cpp  stats.h  utils.cpp  utils.h
ConsoleApplication1/ConsoleApplication1/x64/Debug/: ConsoleApplication1.exe.recipe  ConsoleApplication1.ilk  consoleapplication1.obj.enc  vc143.idb
ConsoleApplication1/ConsoleApplication1/x64/Debug/ConsoleA.328438b4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
USBubble/: USBubble.sln
USBubble/src/: USBubble.filters  USBubble.vcxproj  keyboard.h  keyboard_hook.cpp  main.cpp  src.vcxproj  src.vcxproj.filters  stats.cpp  stats.h  utils.cpp  utils.h
ml_model/: .gitignore  README.md  classifier.py  env.yml  main.ipynb  main.py  pyproject.toml  requirements.txt  version2.ipynb
notification-bot/: Dockerfile
notification-bot/data/: users.csv
notification-bot/routes/: routes.py
